Add unit to message timeout

--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -70,7 +70,7 @@
       </div>
       <hr>
       <label for="msgTimeout">Message Timeout: </label>
-      <input type="text" id="msgTimeout" name="msgTimeout" class="textInput"><br>
+      <input type="text" id="msgTimeout" name="msgTimeout" class="textInput" style="width: 81px;"><label>ms</label><br>
       <label for="msgLimit">Message Limit: </label>
       <input type="text" id="msgLimit" name="msgLimit" class="textInput"><br>
       <label for="cacheTTL" >Cache Expiration: </label>
