Enable localization of imports section

--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -26,7 +26,7 @@
     <form>
       <hr>
       <div class="tooltip">
-      <p>Import/Export</p>
+      <p id="imports">Import/Export</p>
       <span class="tooltiptext">Import or export a YAML settings file.</span>
     </div>
       <hr>
