Word wrap fixes; Names now overflow with ellipses

--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -49,12 +49,12 @@
 
   <template id="chatmessage">
     <div>
-      <span class="meta">
+      <div class="meta">
         <span class="badges"></span>
         <span class="name"></span>
-      </span>
+      </div>
 
-      <span class="message"></span>
+      <div class="message"></div>
     </div>
   </template>
   <script src="js/locale.js" defer></script>
