Add youtube chat and allow redirection with ws chat wrapper

--- a/Holo-Chat.html
+++ b/Holo-Chat.html
@@ -61,11 +61,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
   <script src="js/js-yaml-bundle.js" defer></script>
   <script src="https://github.com/tmijs/tmi.js/releases/download/v1.8.5/tmi.min.js" defer></script>
-  <!--<script src="js/youtube-chat-bundle.js" defer></script>-->
   <script src="js/twitchapi.js" defer></script>
   <script src="js/tmi-emote-parse-bundle.js" defer></script>
   <script src="js/cache.js" defer></script>
   <script src="js/chat.js" defer></script>
+  <script src="js/ytchat.js" defer></script>
   <script src="js/settings.js" defer></script>
   <script src="js/main.js" defer></script>
 </body>
